--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.color-box {
+  width: 100px;
+  height: 100px;
+  border: 2px solid blue;
+  margin: 0 auto;
+}
